platform/argocd/manifests/referencegrant.yaml
# argocd-cert
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-argocd-cert-to-istio
  namespace: argocd
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: istio-system
  to:
    - group: ""
      kind: Secret
      name: argocd-cert
---
# keycloak-cert
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-keycloak-cert-to-istio
  namespace: keycloak
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: istio-system
  to:
    - group: ""
      kind: Secret
      name: keycloak-cert
---
# grafana-cert
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-grafana-cert-to-istio
  namespace: monitoring
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: istio-system
  to:
    - group: ""
      kind: Secret
      name: grafana-cert
---
# prometheus-cert
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-prometheus-cert-to-istio
  namespace: monitoring
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: istio-system
  to:
    - group: ""
      kind: Secret
      name: prometheus-cert
---
# sonarqube-cert
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-sonarqube-cert-to-istio
  namespace: sonarqube
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: istio-system
  to:
    - group: ""
      kind: Secret
      name: sonarqube-cert
